chore: clear build and markdown warnings